<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NOpain</string>
    <string name="menu_settings">Settings</string>
    <string name="calendar_menu_new_survey">New Survey</string>
    <string name="calendar_menu_new_appointment">New Appointment</string>
    <string name="erroremptytext">Please enter text in the textview above</string>
    <string name="errorinvalidtext">Invalid Text Entered</string>
    <string name="EntrySaved">The text is saved.</string>
    <string name="nopainreported">No pain in last 12 hours. Survey not required.</string>
    <string name="invalidinput">Please select a valid input</string>
    <string name="Cameranotsupported">Device does not support Camera.</string>
    <string name="lblButtonJournal">Journal</string>
    <string name="lblButtonExit">Exit</string>
    <string name="lblButtonJournalVideoText">Video Journal</string>
    <string name="lblButtonDone">Done</string>
    <string name="lblButtonDiseaseInfo">Health Information</string>
    <string name="lblButtonJournalViewVideo">View Video</string>
    <string name="lblButtonJournalTextJournal">Text Journal</string>
    <string name="lblButtonJournalTalkAboutYourExperiences">Talk about your experiences</string>
    <string name="lblButtonGoals">Goals</string>
    <string name="lblButtonSocialNetwork">Social Network</string>
    <string name="lblButtonCalendar">Calendar</string>
    <string name="lblButtonVisualizeResults">Results</string>
    <string name="lblButtonSurvey">Survey</string>
    <string name="lblButtonSettings">Settings</string>
    <string name="lblSickKidsLogoContentDescription">SickKids logo</string>
    <string-array name="q5aMedicationsAnswers">
        <item>None</item>
        <item>Acetaminophen (Tylenol)</item>
        <item>Ibuprofen (Advil)</item>
        <item>Naproxen</item>
        <item>Codeine</item>
        <item>Morphine (short-acting)</item>
        <item>Morphine (long-acting)</item>
        <item>Gabapentin</item>
        <item>Aitriptyline</item>
        <item>Other (please list)</item>
    </string-array>  
    <string-array name="q1choice">
        <item></item>
        <item>Yes</item>
        <item>No</item> 
    </string-array>  
        <string-array name="q2choice">
        <item>Yes</item>
        <item>No</item> 
    </string-array>   
    <string-array name="q56bMedicationsAnswers">
        <item>Not helpful</item>
        <item>A little helpful</item>
        <item>Somewhat helpful</item>
        <item>Very Helpful</item>
        <item>Don\'t know</item>
    </string-array>   
    <string-array name="q6aMedicationsAnswers">
        <item>None</item>
        <item>Deep breathing</item>
        <item>Relaxation exercises</item>
        <item>Heat</item>
        <item>Cold</item>
        <item>Massage/rubbing</item>
        <item>Imagery</item>
        <item>Distraction (e.g. TV, books, music)</item>
        <item>Talking with friends/family</item>
        <item>Rest/sleep</item>
        <item>Prayer/meditation</item>
        <item>Other (please list)</item>
    </string-array>
    <string name="q1prev">Did you use the last Advice?</string>
    <string name="q1next">Did you like the last Advice?</string>
    <string name="q1yna">Did you have PAIN in the last 12 hours?</string>
    <string name="q1ynb">Do you have PAIN now?</string>
    <string name="q1Text">Touch the mark and move it to show how much PAIN you have right now.</string>
    <string name="q2Text">Touch the mark and move it to describe your pain when it was at its WORST since the last survey.</string>
    <string name="q3Text">Touch the mark and move it to show how much your pain got in the way of your SLEEP since the last survey.</string>
    <string name="q4Text">Touch the mark and move it to show how much your pain got in the way of THINGS YOU DID since the last survey.</string>
    <string name="q5aText">Please tell us about the medications you have taken to try to reduce your pain since the last survey.</string>
    <string name="q5bText">How helpful was using this strategy?</string>
    <string name="q6aText">Please tell us about other things you used to try to REDUCE your pain since the last survey.</string>
    <string name="q6bText">How helpful was using this strategy?</string>
    <string name="q7Text">Touch the mark and move it to show how much CONTROL you felt you had over your pain since the last survey.</string>
    <string name="btnNextText">Next</string>
    <string name="btnPrevText">Previous</string>
    <string name="surveyQuestionNumber">Question %1$d</string>
    <string name="lblProgressMinimum">0</string>
    <string name="lblProgressMaximum">100</string>
    <string name="btnGetRecommendationText">Get Recommendation</string>
    <string name="recommendationHeader">Recommendation</string>
    <string name="recommendationTalkToParents">Talk to your parents or guardians about your pain.</string>
    <string name="btnTwitterText">Twitter</string>
    <string name="btnFacebookText">Facebook</string>
    <string name="lblButtonClassroom">Classroom</string>
    <string name="lblButtonUsername">User Name</string>
    <string name="lblButtonPassword">Password</string>
    <string name="lblButtonLogin">Login</string>
    <string name="lblButtonRegister">Register</string>
    <string name="successRegistering">Successfully registered.</string>
    <string name="errorRegisteringUnknown">Error registering user. Please restart the application and try again.</string>
    <string name="errorRegisteringUsernameTaken">Error registering user. Username already taken.</string>
    <string name="errorConfirmingPassword">Error confirming registration password (the passwords don\'t match).</string>
    <string name="successLogin">Successfully logged in.</string>
    <string name="errorLoggingIn">Error logging in. Please restart the application and try again.</string>
    <string name="viewListNoEventsFound">No events found.</string>
    <string name="calendarRowNamePrefix">Name: </string>
    <string name="calendarRowTypePrefix">Type: </string>
    <string name="calendarRowDatePrefix">When: </string>
    <string name="calendarRowDurationUntilPrefix">Starts in: </string>
    <string name="btnRecommendationChooseText">Choose</string>
    <string name="lblSettingsDiseaseInfo">Disease for Pain Educational Health information</string>
    <string-array name="diseaseList">
        <item>General Pain</item>
        <item>Cancer</item>
        <item>Juvenile Idiopathic Arthritis (JIA)</item>
        <item>Sickle Cell Disease (SCD)</item>
   </string-array>
   <string name="lblSettingsReminder">Calendar event reminder frequency</string>
    <string-array name="reminderList">
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
   </string-array>
   <string name="titleSettings">Settings</string>
   <string name="errorSavingSettingValue">Error saving setting value. Please try again.</string>
   <string name="lblSettingsMorningAlarm">Survey 1 time</string>
   <string name="lblSettingsEveningAlarm">Survey 2 time</string>
   <string name="errorFindingCalendars">Error finding Google calendars. Please ensure they are created correctly.</string>
   <string name="lblCredits">Lindsay Jibb, Bozhidar Lenchov, Kush Dua
       ECE1778 Creative Mobile Applications Project ©2013</string>
   <string name="successDeleteEvent">Successfully deleted event.</string>
   <string name="errorDeleteEvent">Could not delete event.</string>
   <string name="calendar_menu_edit_event">Edit Event</string>
   <string name="calendar_menu_delete_event">Delete Event</string>
   <string name="err_calendar_no_event_selected">No event selected.</string>
   <string name="calendar_menu_delete_calendar">Delete Calendar</string>
   <string name="lblGoal">Pain management goal:</string>
   <string name="copiedGoalClipboard">Copied goal text to clipboard. Paste to share.</string>
   <string name="errClassroomNotInYet">Classroom pain management modules not implemented yet. Check back soon!</string>
</resources>