<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:text="@string/lblButtonJournalTalkAboutYourExperiences" />

    <Button
        android:id="@+id/btnText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multiAutoCompleteTextView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/lblButtonJournalTextJournal" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:text="@string/lblButtonDone" />

    <Button
        android:id="@+id/btnVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnText"
        android:layout_marginTop="14dp"
        android:text="@string/lblButtonJournalVideoText" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDone"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/lblButtonJournalViewVideo" />

</RelativeLayout>