<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_height="wrap_content" 
  android:layout_width="fill_parent"><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginBackgroundContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
	    android:layout_marginLeft="@dimen/programMarginMedium"
	    android:layout_marginRight="@dimen/programMarginMedium"
        tools:context=".LoginActivity" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblButtonUsername"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/fieldUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:lines="@integer/maxUserPassLines"
            android:maxLines="@integer/maxUserPassLines"
            android:minLines="@integer/maxUserPassLines"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblButtonPassword"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/fieldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:lines="@integer/maxUserPassLines"
            android:maxLines="@integer/maxUserPassLines"
            android:minLines="@integer/maxUserPassLines"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/buttonLoginRegisterContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:onClick="onLoginClickHandler"
                android:text="@string/lblButtonLogin" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:onClick="onRegisterClickHandler"
                android:text="@string/lblButtonRegister" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</ScrollView>
